testdata/baselines/reference/submodule/compiler/declarationEmitMultipleComputedNamesSameDomain.errors.txt
declarationEmitMultipleComputedNamesSameDomain.ts(5,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== declarationEmitMultipleComputedNamesSameDomain.ts (1 errors) ====
    declare const x: string;
    declare const y: "y";
    
    export class Test {
        [x] = 10;
        ~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [y] = 10;
    }